<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page_item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/bg_thumbnail">

    <ImageView
        android:id="@+id/img_page"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_page_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="6dp"
        android:background="@drawable/bg_pill"
        android:paddingStart="8dp"
        android:paddingTop="2dp"
        android:paddingEnd="8dp"
        android:paddingBottom="2dp"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/tv_pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="6dp"
        android:background="@drawable/bg_pill"
        android:paddingStart="6dp"
        android:paddingTop="2dp"
        android:paddingEnd="6dp"
        android:paddingBottom="2dp"
        android:text="@string/pages_pending_tag"
        android:textColor="@color/danger"
        android:textSize="10sp"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/btn_page_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="4dp"
        android:background="@drawable/bg_circle_button"
        android:contentDescription="@string/pages_menu"
        android:padding="5dp"
        android:src="@drawable/ic_more" />

    <ImageButton
        android:id="@+id/btn_delete_page"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top|end"
        android:layout_margin="4dp"
        android:background="@drawable/bg_circle_button"
        android:contentDescription="@string/delete"
        android:padding="5dp"
        android:src="@drawable/ic_close" />
</FrameLayout>
